More setup chapters

--- a/docs/examples/system_setup.ipynb
+++ b/docs/examples/system_setup.ipynb
@@ -1,12 +1,166 @@
 {
  "cells": [
   {
+   "source": [
+    "![image](https://www.ewatercycle.org/assets/logo.png)\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# System setup\n",
     "\n",
     "To use ewatercycle package you need to setup the system with software and data.\n"
+   ]
+  },
+  {
+   "source": [
+    "1. [Conda environment](#Conda-environment)\n",
+    "1. [Install ewatercycle package](#Install-ewatercycle-package)\n",
+    "1. [Configure ESMValTool](#Configure-ESMValTool)\n",
+    "1. [Download climate data](#Download-climate-data)\n",
+    "1. [Install container engine](#Install-container-engine)\n",
+    "1. [Configure ewatercycle](#Configure-ewatercycle)\n",
+    "1. [Model container images](#Model-container-images)\n",
+    "1. [Download example parameter sets](#Download-example-parameter-sets)\n",
+    "1. [Download example forcing](#Download-example-forcing)\n",
+    "1. [Download observation data](#Download-observation-data)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Conda environment\n",
+    "\n",
+    "The ewatercycle Python package uses a lot of geospatial dependencies which can be installed using [Conda](https://conda.io/) package management system.\n",
+    "\n",
+    "Instal Conda by using the [miniconda installer](https://docs.conda.io/en/latest/miniconda.html)\n",
+    "\n",
+    "After conda is installed you can install the software dependencies with a [conda environment file](https://github.com/eWaterCycle/ewatercycle/blob/master/environment.yml).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/eWaterCycle/ewatercycle/master/environment.yml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda env create --file environment.yml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!conda activate ewatercycle"
+   ]
+  },
+  {
+   "source": [
+    "## Install ewatercycle package\n",
+    "\n",
+    "The Python package can be installed using pip"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install git+https://github.com/eWaterCycle/ewatercycle.git#egg=ewatercycle"
+   ]
+  },
+  {
+   "source": [
+    "## Configure ESMValTool\n",
+    "\n",
+    "ESMValTool is used to generate forcing (temperature, precipitation, etc.) files from climate data sets for hydrological models. The ESMValTool has been installed as a dependency of the package.\n",
+    "\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "See https://docs.esmvaltool.org/en/latest/input.html how configure ESMValTool "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Download climate data\n",
+    "\n",
+    "The ERA5 and ERA-Interim climate datasets can be used to generate forcings\n",
+    "\n",
+    "### ERA5\n",
+    "\n",
+    "To download ERA5 data files you can use the [era5cli](https://era5cli.readthedocs.io/) tool."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install era5cli"
+   ]
+  },
+  {
+   "source": [
+    "### ERA-Interim\n",
+    "\n",
+    "ERA-Interim has been superseeded by ERA5, but could be useful for reproduction studies and its smaller size.\n",
+    "The ERA-Interim data files can be downloaded at https://www.ecmwf.int/en/forecasts/datasets/reanalysis-datasets/era-interim"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Install container engine\n",
+    "\n",
+    "In ewatercycle package the hydrological models are run in containers with engines like [Singularity](https://singularity.lbl.gov/) or [Docker](https://www.docker.com/).\n",
+    "At least Singularity or Docker should be installed.\n",
+    "\n",
+    "### Singularity\n",
+    "\n",
+    "Install Singularity using [instructions](https://singularity.hpcng.org/user-docs/master/quick_start.html).\n",
+    "\n",
+    "### Docker\n",
+    "\n",
+    "Install Docker using [instructions](https://docs.docker.com/engine/install/).\n",
+    "Docker should be configured so it can be [called without sudo](https://docs.docker.com/engine/install/linux-postinstall/#manage-docker-as-a-non-root-user)"
    ]
   },
   {
@@ -25,17 +179,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ewatercycle import CFG\n",
-    "from ewatercycle.parameter_sets import download_example_parameter_sets\n",
-    "from ewatercycle.parameter_sets import available_parameter_sets\n",
-    "from ewatercycle.parameter_sets import get_parameter_set"
+    "import ewatercycle\n",
+    "import ewatercycle.parameter_sets"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuration\n",
+    "## Configure ewatercycle\n",
     "\n",
     "The ewatercycle package simplifies the API by reading some of the directories and other configurations from a configuration file.\n"
    ]
@@ -64,9 +216,15 @@
     }
    ],
    "source": [
-    "CFG['parameterset_dir'] = './parameter-sets'\n",
-    "CFG['ewatercycle_config'] = './ewatercycle.yaml'\n",
-    "CFG.save_to_file()"
+    "ewatercycle.CFG['container_engine'] = 'singularity'  # or 'docker'\n",
+    "ewatercycle.CFG['singularity_dir'] = './singularity-images'\n",
+    "ewatercycle.CFG['output_dir'] = './'\n",
+    "ewatercycle.CFG['grdc_location'] = './grdc-observations'\n",
+    "ewatercycle.CFG['ewatercycle_config'] = './ewatercycle.yaml'\n",
+    "# \n",
+    "ewatercycle.CFG['parameterset_dir'] = './parameter-sets'\n",
+    "\n",
+    "ewatercycle.CFG.save_to_file()"
    ]
   },
   {
@@ -75,7 +233,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CFG.load_from_file('./ewatercycle.yaml')"
+    "ewatercycle.CFG.load_from_file('./ewatercycle.yaml')"
+   ]
+  },
+  {
+   "source": [
+    "To make the ewatercycle configuration load by default for current user it should be copied to `~/.config/ewatercycle/ewatercycle.yaml`.\n",
+    "\n",
+    "To make the ewatercycle configuration available to all users on the system it should be copied to `/etc/ewatercycle.yaml`.\n",
+    "\n",
+    "\n",
+    "### Configuration file for Cartesius system of SURFSara\n",
+    "\n",
+    "TODO\n",
+    "\n",
+    "### Configuration file for ewatecycle Jupyter machine\n",
+    "\n",
+    "TODO"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Model container images\n",
+    "\n",
+    "As hydrological models run in container their container images should be made available on the system.\n",
+    "\n",
+    "The names of the images can be found in the `ewatercycle.models.*` classes.\n",
+    "\n",
+    "### Docker\n",
+    "\n",
+    "Docker images will be downloaded with `docker pull`:\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!docker pull ewatercycle/lisflood-grpc4bmi:20.10 ewatercycle/marrmot-grpc4bmi:2020.11 ewatercycle/pcrg-grpc4bmi:setters ewatercycle/wflow-grpc4bmi:2020.1.1"
+   ]
+  },
+  {
+   "source": [
+    "### Singularity\n",
+    "\n",
+    "Singularity images should be stored in configured directory (`ewatercycle.CFG['singularity_dir']`) and can build from Docker with:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd {ewatercycle.CFG['singularity_dir']}\n",
+    "!singularity build ewatercycle-lisflood-grpc4bmi.sif docker://ewatercycle/lisflood-grpc4bmi:latest\n",
+    "!singularity build ewatercycle-pcrg-grpc4bmi.sif docker://ewatercycle/pcrg-grpc4bmi:latest\n",
+    "!singularity build ewatercycle-marrmot-grpc4bmi.sif docker://ewatercycle/marrmot-grpc4bmi:latest\n",
+    "!singularity build ewatercycle-wflow-grpc4bmi.sif docker://ewatercycle/wflow-grpc4bmi:latest\n",
+    "!cd -"
    ]
   },
   {
@@ -112,7 +335,7 @@
     }
    ],
    "source": [
-    "download_example_parameter_sets()"
+    "ewatercycle.parameter_sets.download_example_parameter_sets()"
    ]
   },
   {
@@ -180,7 +403,7 @@
     }
    ],
    "source": [
-    "available_parameter_sets()"
+    "ewatercycle.parameter_sets.available_parameter_sets()"
    ]
   },
   {
@@ -200,7 +423,7 @@
     }
    ],
    "source": [
-    "parameter_set = get_parameter_set('pcrglobwb_example_case')\n",
+    "parameter_set = ewatercycle.parameter_sets.get_parameter_set('pcrglobwb_example_case')\n",
     "parameter_set"
    ]
   },
@@ -210,6 +433,46 @@
    "source": [
     "The `parameter_set` variable can be passed to a model class constructor."
    ]
+  },
+  {
+   "source": [
+    "## Download example forcing\n",
+    "\n",
+    "To be able to run the Marrmot example notebooks you need a forcing file.\n",
+    "You can use `ewatercycle.forcing.generate()` to make it or use an already prepared [forcing file](https://github.com/wknoben/MARRMoT/blob/master/BMI/Config/BMI_testcase_m01_BuffaloRiver_TN_USA.mat)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd {ewatercycle.CFG['parameterset_dir']}\n",
+    "!wget https://github.com/wknoben/MARRMoT/blob/master/BMI/Config/BMI_testcase_m01_BuffaloRiver_TN_USA.mat"
+   ]
+  },
+  {
+   "source": [
+    "## Download observation data\n",
+    "\n",
+    "To calculate metrics or plot hydrograph observation data is needed. The ewatercycle package can use [Global Runoff Data Centre (GRDC)](https://www.bafg.de/GRDC) or [U.S. Geological Survey Water Services (USGS)](https://waterservices.usgs.gov/) data.\n",
+    "\n",
+    "The GRDC daily data files can be ordered at [https://www.bafg.de/GRDC/EN/02_srvcs/21_tmsrs/riverdischarge_node.html](https://www.bafg.de/GRDC/EN/02_srvcs/21_tmsrs/riverdischarge_node.html).\n",
+    "\n",
+    "The GRDC files should be stored in `ewatercycle.CFG['grdc_location']` directory."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -217,9 +480,8 @@
    "hash": "4f63c3f017d58640bc2174e5f1b6c1610e3d96c1a3fe90d1d439f265cee739e3"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.9.5 64-bit (conda)"
   },
   "language_info": {
    "codemirror_mode": {
