--- a/docs/examples/system_setup.ipynb
+++ b/docs/examples/system_setup.ipynb
@@ -33,10 +33,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "## Conda environment\n",
     "\n",
@@ -45,7 +41,9 @@
     "Instal Conda by using the [miniconda installer](https://docs.conda.io/en/latest/miniconda.html)\n",
     "\n",
     "After conda is installed you can install the software dependencies with a [conda environment file](https://github.com/eWaterCycle/ewatercycle/blob/master/environment.yml).\n"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -105,7 +103,7 @@
   },
   {
    "source": [
-    "See https://docs.esmvaltool.org/en/latest/input.html how configure ESMValTool "
+    "See https://docs.esmvaltool.org/en/latest/quickstart/configuration.html how configure ESMValTool "
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -143,10 +141,6 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "## Install container engine\n",
     "\n",
@@ -161,7 +155,9 @@
     "\n",
     "Install Docker using [instructions](https://docs.docker.com/engine/install/).\n",
     "Docker should be configured so it can be [called without sudo](https://docs.docker.com/engine/install/linux-postinstall/#manage-docker-as-a-non-root-user)"
-   ]
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -189,7 +185,9 @@
    "source": [
     "## Configure ewatercycle\n",
     "\n",
-    "The ewatercycle package simplifies the API by reading some of the directories and other configurations from a configuration file.\n"
+    "The ewatercycle package simplifies the API by reading some of the directories and other configurations from a configuration file.\n",
+    "\n",
+    "The configuration can be set in Python with"
    ]
   },
   {
@@ -216,16 +214,42 @@
     }
    ],
    "source": [
+    "# Which container engine is used to run the hydrological models\n",
     "ewatercycle.CFG['container_engine'] = 'singularity'  # or 'docker'\n",
+    "# If container_engine==singularity then where can the singularity images files (*.sif) be found.\n",
     "ewatercycle.CFG['singularity_dir'] = './singularity-images'\n",
+    "# Directory in which output of model runs is stored. Each model run will generate a sub directory inside output_dir\n",
     "ewatercycle.CFG['output_dir'] = './'\n",
+    "# Where can GRDC observation files (<station identifier>_Q_Day.Cmd.txt) be found.\n",
     "ewatercycle.CFG['grdc_location'] = './grdc-observations'\n",
-    "ewatercycle.CFG['ewatercycle_config'] = './ewatercycle.yaml'\n",
-    "# \n",
+    "# Where can parameters sets prepared by the system administator be found\n",
     "ewatercycle.CFG['parameterset_dir'] = './parameter-sets'\n",
-    "\n",
+    "# Where is the configuration saved or loaded from\n",
+    "ewatercycle.CFG['ewatercycle_config'] = './ewatercycle.yaml'"
+   ]
+  },
+  {
+   "source": [
+    "and then written to disk with "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ewatercycle.CFG.save_to_file()"
    ]
+  },
+  {
+   "source": [
+    "Later it can be loaded by using:"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -238,18 +262,30 @@
   },
   {
    "source": [
-    "To make the ewatercycle configuration load by default for current user it should be copied to `~/.config/ewatercycle/ewatercycle.yaml`.\n",
+    "To make the ewatercycle configuration load by default for current user it should be copied to `~/.config/ewatercycle/ewatercycle.yaml` .\n",
     "\n",
-    "To make the ewatercycle configuration available to all users on the system it should be copied to `/etc/ewatercycle.yaml`.\n",
+    "To make the ewatercycle configuration available to all users on the system it should be copied to `/etc/ewatercycle.yaml` .\n",
     "\n",
     "\n",
     "### Configuration file for Cartesius system of SURFSara\n",
     "\n",
-    "TODO\n",
+    "```yaml\n",
+    "container_engine: singularity\n",
+    "singularity_dir: /projects/0/wtrcycle/singularity-images\n",
+    "output_dir: /scratch/shared/ewatercycle\n",
+    "grdc_location: /projects/0/wtrcycle/GRDC\n",
+    "parameterset_dir: /projects/0/wtrcycle/parameter-sets\n",
+    "```\n",
     "\n",
     "### Configuration file for ewatecycle Jupyter machine\n",
     "\n",
-    "TODO"
+    "```yaml\n",
+    "container_engine: singularity\n",
+    "singularity_dir: /mnt/data/singularity-images\n",
+    "output_dir: /scratch\n",
+    "grdc_location: /mnt/data/GRDC\n",
+    "parameterset_dir: /mnt/data/parameter-sets\n",
+    "```"
    ],
    "cell_type": "markdown",
    "metadata": {}
