#156 don't return lat/lon but add debug message instead

--- a/docs/examples/pcrglobwb.ipynb
+++ b/docs/examples/pcrglobwb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40a18721",
+   "id": "d919f173",
    "metadata": {},
    "source": [
     "# Running PCRGlobWB using the eWaterCycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb9f8cda",
+   "id": "d7c30256",
    "metadata": {
     "tags": []
    },
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b7e20a95",
+   "id": "07974f00",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "91499a29",
+   "id": "8899309e",
    "metadata": {},
    "outputs": [
     {
@@ -61,11 +61,11 @@
      "text": [
       "Parameter set\n",
       "-------------\n",
-      "name='pcrglobwb_example_case'\n",
-      "directory=PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case')\n",
-      "config=PosixPath('/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case/setup_natural_test.ini')\n",
-      "doi='N/A'\n",
-      "target_model='pcrglobwb'\n",
+      "name=pcrglobwb_example_case\n",
+      "directory=/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case\n",
+      "config=/home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case/setup_natural_test.ini\n",
+      "doi=N/A\n",
+      "target_model=pcrglobwb\n",
       "supported_model_versions={'setters'}\n"
      ]
     }
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6dbfeee8",
+   "id": "ad66f614",
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
      "text": [
       "Forcing data for PCRGlobWB\n",
       "--------------------------\n",
-      "Directory: ./parameter-sets/pcrglobwb_example_case/forcing\n",
+      "Directory: /home/peter/ewatercycle/ewatercycle/docs/examples/parameter-sets/pcrglobwb_example_case/forcing\n",
       "Start time: 2001-01-01T00:00:00Z\n",
       "End time: 2010-12-31T00:00:00Z\n",
       "Shapefile: None\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "53c91d06",
+   "id": "6a8aa46c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "523c2f1e",
+   "id": "d42ec6b5",
    "metadata": {},
    "outputs": [
     {
@@ -150,14 +150,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3d91c55a",
+   "id": "e9320b20",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210708_131203/pcrglobwb_ewatercycle.ini',\n",
-       " '/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210708_131203')"
+       "('/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210709_085057/pcrglobwb_ewatercycle.ini',\n",
+       " '/home/peter/ewatercycle/ewatercycle/docs/examples/pcrglobwb_20210709_085057')"
       ]
      },
      "execution_count": 6,
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8374cfa1",
+   "id": "2095204e",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b98df964",
+   "id": "4a3cc580",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "27dbf816",
+   "id": "2597fe43",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6cde2f5d",
+   "id": "3d0483b0",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "592bf6dd",
+   "id": "2d1f7386",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "  * latitude   (latitude) float64 46.25 46.75 47.25 47.75 ... 51.25 51.75 52.25\n",
        "    time       object 2000-12-31 00:00:00\n",
        "Attributes:\n",
-       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 13</li><li><span class='xr-has-index'>longitude</span>: 17</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-a06f6250-d794-4c3b-8686-59ae6dc6f2a0' class='xr-array-in' type='checkbox' checked><label for='section-a06f6250-d794-4c3b-8686-59ae6dc6f2a0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 13</li><li><span class='xr-has-index'>longitude</span>: 17</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-87b94167-869e-486b-8864-8d886955eb53' class='xr-array-in' type='checkbox' checked><label for='section-87b94167-869e-486b-8864-8d886955eb53' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
        "        nan, nan, nan, nan],\n",
        "       [nan, nan, nan, nan, nan, nan,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
        "        nan, nan, nan, nan],\n",
@@ -682,9 +682,9 @@
        "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0., nan, nan, nan, nan,\n",
        "        nan, nan, nan, nan],\n",
        "       [nan,  0.,  0.,  0.,  0., nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "        nan, nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-689accbc-79ab-4849-8e91-c308fe99ffaf' class='xr-section-summary-in' type='checkbox'  checked><label for='section-689accbc-79ab-4849-8e91-c308fe99ffaf' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 4.25 4.75 ... 11.25 11.75</div><input id='attrs-a49318aa-0ef7-4475-a886-73ed01537dc4' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a49318aa-0ef7-4475-a886-73ed01537dc4' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-dfc73d2f-018f-4b02-9ff3-bb8be1976b63' class='xr-var-data-in' type='checkbox'><label for='data-dfc73d2f-018f-4b02-9ff3-bb8be1976b63' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  4.25,  4.75,  5.25,  5.75,  6.25,  6.75,  7.25,  7.75,  8.25,\n",
-       "        8.75,  9.25,  9.75, 10.25, 10.75, 11.25, 11.75])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 46.75 47.25 ... 51.75 52.25</div><input id='attrs-1bb988e7-9d12-4ba3-b259-f79a3178cde6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1bb988e7-9d12-4ba3-b259-f79a3178cde6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-65d79b4a-1bf6-4050-ac4e-f9e72bbe6724' class='xr-var-data-in' type='checkbox'><label for='data-65d79b4a-1bf6-4050-ac4e-f9e72bbe6724' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 46.75, 47.25, 47.75, 48.25, 48.75, 49.25, 49.75, 50.25, 50.75,\n",
-       "       51.25, 51.75, 52.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2000-12-31 00:00:00</div><input id='attrs-6d0088dd-4e6a-48ca-839f-1035b5788c44' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-6d0088dd-4e6a-48ca-839f-1035b5788c44' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f3f3b78f-0e3e-462a-8238-4d8e3853259c' class='xr-var-data-in' type='checkbox'><label for='data-f3f3b78f-0e3e-462a-8238-4d8e3853259c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2000, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-f479414d-d9f7-49ca-bd1f-5ea7ddbbcda5' class='xr-section-summary-in' type='checkbox'  checked><label for='section-f479414d-d9f7-49ca-bd1f-5ea7ddbbcda5' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
+       "        nan, nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-91d139d7-6946-4072-99a9-ef7be084a39a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-91d139d7-6946-4072-99a9-ef7be084a39a' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 4.25 4.75 ... 11.25 11.75</div><input id='attrs-754e7414-356c-419c-a706-db9057951322' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-754e7414-356c-419c-a706-db9057951322' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3f7bf794-e575-4dc9-a7c7-5ca0980e97cd' class='xr-var-data-in' type='checkbox'><label for='data-3f7bf794-e575-4dc9-a7c7-5ca0980e97cd' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  4.25,  4.75,  5.25,  5.75,  6.25,  6.75,  7.25,  7.75,  8.25,\n",
+       "        8.75,  9.25,  9.75, 10.25, 10.75, 11.25, 11.75])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 46.75 47.25 ... 51.75 52.25</div><input id='attrs-fd1c32f8-558e-4ea6-b0ba-065818d5a79c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-fd1c32f8-558e-4ea6-b0ba-065818d5a79c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f7de6ceb-da9b-472d-8e88-1f4b289d8d8d' class='xr-var-data-in' type='checkbox'><label for='data-f7de6ceb-da9b-472d-8e88-1f4b289d8d8d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 46.75, 47.25, 47.75, 48.25, 48.75, 49.25, 49.75, 50.25, 50.75,\n",
+       "       51.25, 51.75, 52.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2000-12-31 00:00:00</div><input id='attrs-84764f2e-991f-4911-b8f8-a2046c055b58' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-84764f2e-991f-4911-b8f8-a2046c055b58' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-9bd17122-5955-4017-98d1-f280dffade57' class='xr-var-data-in' type='checkbox'><label for='data-9bd17122-5955-4017-98d1-f280dffade57' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2000, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-764c86cd-dd0b-4c4a-a56a-d4f4c67ced7c' class='xr-section-summary-in' type='checkbox'  checked><label for='section-764c86cd-dd0b-4c4a-a56a-d4f4c67ced7c' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'discharge' (latitude: 13, longitude: 17)>\n",
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "092ab38f",
+   "id": "b8fcaedd",
    "metadata": {},
    "outputs": [
     {
@@ -758,20 +758,20 @@
     "# Run the model for a few steps and show progress every tenth step\n",
     "for i in range(100):\n",
     "    if i % 10 == 0:\n",
-    "        print(pcrglob.time)\n",
+    "        print(pcrglob.time_as_isostr)\n",
     "    pcrglob.update()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a16bf647",
+   "id": "a9248fbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1950.56518555,  163.59661865,           nan])"
+       "<matplotlib.collections.PathCollection at 0x7fde44459f70>"
       ]
      },
      "execution_count": 13,
@@ -795,15 +795,47 @@
     "da = pcrglob.get_value_as_xarray(\"discharge\")\n",
     "qm = da.plot(robust=True, cmap='GnBu')\n",
     "\n",
-    "# Add some crosses to check that 'get_value_at_coords' works correctly below\n",
-    "qm.axes.scatter([7.8, 10.2, 11], [50.3, 49.8, 47], s=250, c='r', marker='x', lw=2)\n",
-    "pcrglob.get_value_at_coords('discharge', lon=[7.8, 10.2, 11], lat=[50.3, 49.8, 47])"
+    "# Add some verification points\n",
+    "target_longitudes = [7.8, 10.2, 11]\n",
+    "target_latitudes = [50.3, 49.8, 47]\n",
+    "qm.axes.scatter(target_longitudes, target_latitudes, s=250, c='r', marker='x', lw=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2b0818a5",
+   "id": "bada09a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requested point was lon: 7.8, lat: 50.3; closest grid point is 7.75, 50.25.\n",
+      "Requested point was lon: 10.2, lat: 49.8; closest grid point is 10.25, 49.75.\n",
+      "Requested point was lon: 11, lat: 47; closest grid point is 10.75, 47.25.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1950.56518555,  163.59661865,           nan])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verify that we can get the right values at the target locations\n",
+    "pcrglob.get_value_at_coords('discharge', lon=target_longitudes, lat=target_latitudes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ea4ee0bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6825c6c0",
+   "id": "d1346abe",
    "metadata": {},
    "outputs": [],
    "source": []
