--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -42,9 +42,9 @@
     "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
     "import pandas as pd\n",
     "\n",
+    "import ewatercycle\n",
     "import ewatercycle.forcing\n",
-    "import ewatercycle.models\n",
-    "import ewatercycle.config"
+    "import ewatercycle.models"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "# Load eWaterCycle configuration file\n",
-    "ewatercycle.config.CFG.load_from_file('~/.config/ewatercycle/ewatercycle.yaml')"
+    "ewatercycle.CFG.load_from_file('~/.config/ewatercycle/ewatercycle.yaml')"
    ]
   },
   {
