--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -20,26 +20,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "2a07ee36-bf51-46ab-bc5b-bffd6255d3ec",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sarah/anaconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
-      "  Thank you for trying out the new ESMValCore API.\n",
-      "  Note that this API is experimental and may be subject to change.\n",
-      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
-      "/home/sarah/anaconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
-      "/home/sarah/anaconda3/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
+    "warnings.filterwarnings(\"ignore\", category=UserWarning)\n",
     "import pandas as pd\n",
     "\n",
     "import ewatercycle\n",
