add links to marrmot and system setup

--- a/docs/examples/MarrmotM01.ipynb
+++ b/docs/examples/MarrmotM01.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Running MARRMoT M01 model using eWaterCycle package\n",
     "\n",
-    "This notebooks shows how to run MARRMoT M01 model using an example use-case. More information about data, configuration and installation instructions can be found in the System setup in the eWaterCycle documentation."
+    "This notebooks shows how to run [MARRMoT](https://github.com/wknoben/MARRMoT) M01 model using an example use-case. More information about data, configuration and installation instructions can be found in the [System setup](https://ewatercycle.readthedocs.io/en/latest/system_setup.html) in the eWaterCycle documentation."
    ]
   },
   {
@@ -172,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210709_111126\n"
+      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210712_074055\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "3e0f3efc",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        " ('end time', '1989-02-01T00:00:00Z')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "97324198",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "85c9208b",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        " 'wb')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
