replace work_dir with cfg_dir

--- a/docs/examples/MarrmotM01.ipynb
+++ b/docs/examples/MarrmotM01.ipynb
@@ -164,24 +164,16 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c106ed31-e279-4005-b061-618d5b17221f",
+   "id": "da8985a5-680c-454a-b8cd-0e0839126152",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/sarah/GitHub/ewatercycle/docs/examples/marrmot_20210712_074055\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Change one of the model parameters and end time using setup() function\n",
-    "cfg_file, work_dir = model.setup(\n",
+    "cfg_file, cfg_dir = model.setup(\n",
     "    maximum_soil_moisture_storage=12.0,\n",
     "    end_time = \"1989-02-01T00:00:00Z\",\n",
     ")\n",
-    "print(work_dir)"
+    "print(cfg_dir)"
    ]
   },
   {
