--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -186,11 +186,11 @@
    ],
    "source": [
     "# Change one of the model parameters and end time using setup() function\n",
-    "cfg_file, work_dir = model.setup(\n",
+    "cfg_file, cfg_dir = model.setup(\n",
     "    maximum_soil_moisture_storage=12.0,\n",
     "    end_time = \"1989-02-01T00:00:00Z\",\n",
     ")\n",
-    "print(work_dir)"
+    "print(cfg_dir)"
    ]
   },
   {
