replace .strftime to .date

--- a/docs/examples/MarrmotM14.ipynb
+++ b/docs/examples/MarrmotM14.ipynb
@@ -324,7 +324,7 @@
     "    model.update()\n",
     "    # Store model time and variable output\n",
     "    discharge.append(model.get_value('flux_out_Q')[0])\n",
-    "    time_range.append(model.time_as_datetime.strftime('%Y-%m-%d'))\n",
+    "    time_range.append(model.time_as_datetime.date())\n",
     "    print(model.time_as_isostr)\n"
    ]
   },
